# remote-party-finder

./: .build.yml  .envrc  .gitignore  Cargo.toml  README.md  default.nix
.github/workflows/: main.yml
assets/: listings.css  listings.js  minireset.css
csharp/: RemotePartyFinder.sln
csharp/RemotePartyFinder/: ConfigWindow.cs  Configuration.cs  Gatherer.cs  Plugin.cs  RemotePartyFinder.csproj  RemotePartyFinder.yaml  UploadUrl.cs  UploadableListing.cs  packages.lock.json
csharp/SourceGenerator/: AutoTranslate.cs  Program.cs  SeStringExtensions.cs  SourceGenerator.csproj
docs/: api-v1.md  api-v2.md
server/: .envrc  Cargo.toml  config.example.toml  default.nix
server/assets/: common.css  common.js  listings.css  listings.js  stats.css  stats.js
server/nix/: sources.json
server/src/: api_v2_contract.rs  base64_sestring.rs  ffxiv.rs  listing.rs  listing_container.rs  main.rs  sestring_ext.rs  stats.rs  test.rs  web.rs
server/src/ffxiv/: auto_translate.rs  duties.rs  jobs.rs  roulettes.rs  territory_names.rs  treasure_maps.rs  worlds.rs
server/src/template/: listings.rs  mod.rs  stats.rs
server/src/web/: api.rs  stats.rs
server/src/web/v2/: contracts.rs  filters.rs  id_inventory.rs  listings.rs  lookups.rs  mod.rs
server/templates/: _frame.html  listings.html  stats.html
src/: config.rs  ffxiv.rs  listing.rs  listing_container.rs  main.rs  sestring_ext.rs  test.rs  web.rs
src/ffxiv/: duties.rs  roulettes.rs  treasure_maps.rs
src/template/: listings.rs  mod.rs
templates/: _frame.html  listings.html
