[package]
name = "remote-party-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = { version = "0.11", features = ["with-warp"] }
askama_warp = "0.12"
base64 = "0.13"
bitflags = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
ffxiv_types = "1"
lazy_static = "1"
maplit = "1"
mime = "0.3"
mongodb = { version = "2", features = ["bson-chrono-0_4"] }
sestring = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
toml = "0.7"
warp = { version = "0.3", default-features = false }

[dev-dependencies]
lazy_static = "1"
